<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_add_task"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="always"
        android:title="@string/menu_add_task"/>
    <item
        android:id="@+id/menu_delete_done_items"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="always"
        android:title="@string/delete_done_tasks">
    </item>
    <item
        android:id="@+id/menu_add_group"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/menu_add_group"/>
    <item
        android:id="@+id/menu_group_editor"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="ifRoom"
        android:title="@string/menu_group_management"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="ifRoom"
        android:title="@string/menu_settings"/>

</menu>