<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/Activity.Main.ListCard.Style">

    <TextView
            android:id="@+id/list_row_label"
            style="@style/Activity.Main.ListItem.Big.Style"
            android:text="@string/app_name"/>

    <TextView
            android:id="@+id/list_row_date_label"
            style="@style/Activity.Main.ListItem.Small.Style"
            android:layout_below="@+id/list_row_label"
            android:text="@string/reminder_not_set"/>

    <View
            android:id="@+id/list_item_separator"
            style="@style/Activity.Main.ListItem.Separator.Style"
            android:layout_below="@+id/list_row_date_label"/>

    <LinearLayout
            android:id="@+id/task_list_item_commands"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/list_item_separator"
            android:layout_alignRight="@+id/list_item_separator"
            android:layout_below="@+id/list_item_separator">

        <Button
                android:id="@+id/button_task_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/cyan"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/edit_label"/>

        <Button
                android:id="@+id/button_task_completed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/cyan"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/mark_completed_label"/>
    </LinearLayout>

    <View
            android:layout_below="@+id/task_list_item_commands"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_padding_horizontal"/>

</RelativeLayout>